# rest-examples

./: .gitignore  README.md
js/next/: .env.example  .gitignore  CLAUDE.md  README.md  compose.yaml  dockerfile  next.config.mjs  package-lock.json  package.json
js/next/prisma/: schema.prisma  seed.ts
js/next/src/app/: layout.tsx  page.tsx
js/next/src/app/api/posts/: route.ts
js/next/src/app/api/posts/[id]/: route.ts
js/next/src/app/api/users/: route.ts
js/next/src/app/api/users/[id]/: route.ts
py/demo-django/: README.md  client.py  compose.yaml  import-1.csv  pyproject.toml  schema.yaml
py/demo-django/api/: admin.py  models.py  serializers.py  urls.py  views.py
py/demo-django/api/management/commands/: generate_notes.py  import_data.py
py/demo-django/api/migrations/: 0001_initial.py  0002_note.py  0003_examplecsvdata.py
py/demo-django/foo/: asgi.py  settings.py  urls.py  wsgi.py
py/demo-fastapi/: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  compose.yaml  dockerfile  entrypoint.sh  main.py  pyproject.toml
py/demo-fastapi/alembic/: env.py  models.py
py/demo-fastapi/alembic/versions/: 7c188f3a0a98_create_users_table.py  b8684ca97801_add_description_field_to_user_model.py
py/demo-fastapi/app/: crud.py  db.py  models.py  schemas.py  settings.py
py/demo-fastapi/app/routers/: users.py
