[project]
name = "foo-demo"
version = "0.1.0"
description = "A FastAPI + SQLAlchemy demo project for interview."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "alembic", 
    "pydantic-settings",
    "psycopg2-binary",
    "redis",
    "email-validator",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
