[project]
name = "foo-demo"
version = "0.1.0"
description = "A FastAPI + SQLAlchemy demo project for interview."
readme = "README.md"
requires-python = ">=3.13"
packages = [
    { include = "foo_demo" },
    { include = "app" },
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "alembic",
    "pydantic-settings",
    "psycopg2-binary",
    "redis",
    "email-validator",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["foo_demo", "app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
